@@ -77,6 +77,7 @@ fixed bugs:
   valid unboundedness proof and reoptimizing the LP with modified settings if the solution is not feasible
 - fixed bug in cons_orbitope with calling conflict analysis
 - fixed bug in flatzinc reader w.r.t. boolean expressions
+- fixed bug in nlpi_oracle w.r.t. changing linear coefs in a NLP constraint
 
 parameters
 - changed parameter "propagating/pseudoobj/maxcands" to "propagating/pseudoobj/minuseless" (see prop_pseudoobj.h)
